--- a/app/src/main/res/layout/nav_header_navigation.xml
+++ b/app/src/main/res/layout/nav_header_navigation.xml
@@ -17,19 +17,20 @@
         android:layout_height="95dp"
         android:src="@drawable/avatar"
         app:civ_border_color="@android:color/holo_blue_light"
-        android:id="@+id/circleImage"
+        android:id="@+id/useravatar"
         app:civ_border_width="2dp"/>
 
     <TextView
-        android:layout_width="match_parent"
+        android:id="@+id/tv_user"
+        android:layout_width="370dp"
         android:layout_height="wrap_content"
-        android:text="@string/nav_header_title"
+        android:text="@string/text_username"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:id="@+id/tv_email"
+        android:layout_width="370dp"
         android:layout_height="wrap_content"
-        android:text="@string/nav_header_subtitle" />
+        android:text="@string/text_email" />
 
 </LinearLayout>
