--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -16,16 +16,10 @@
         android:name="com.example.newsproject4.ui.profile.profile"
         android:label="@string/menu_profile"
         tools:layout="@layout/fragment_profile" />
-
     <fragment
-        android:id="@+id/nav_logout"
-        android:name="com.example.newsproject4.ui.logout.logout"
-        android:label="@string/menu_logout"
-        tools:layout="@layout/fragment_logout" />
+        android:id="@+id/nav_login"
+        android:name="com.example.newsproject4.ui.login.login"
+        android:label="@string/menu_login"
+        tools:layout="@layout/fragment_login" />
 
-    <fragment
-        android:id="@+id/nav_exit"
-        android:name="com.example.newsproject4.ui.exit.exit"
-        android:label="@string/menu_exit"
-        tools:layout="@layout/fragment_exit" />
 </navigation>
