--- a/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -6,7 +6,8 @@
         <item
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_home_black_24dp"
-            android:title="@string/menu_home" />
+            android:title="@string/menu_home"
+            android:checked="true"/>
         <item
             android:id="@+id/nav_profile"
             android:icon="@drawable/ic_profile_black_24dp"
